# serializer version: 1
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.1
  '''
  SELECT "markettor_scheduledchange"."id",
         "markettor_scheduledchange"."record_id",
         "markettor_scheduledchange"."model_name",
         "markettor_scheduledchange"."payload",
         "markettor_scheduledchange"."scheduled_at",
         "markettor_scheduledchange"."executed_at",
         "markettor_scheduledchange"."failure_reason",
         "markettor_scheduledchange"."team_id",
         "markettor_scheduledchange"."created_at",
         "markettor_scheduledchange"."created_by_id",
         "markettor_scheduledchange"."updated_at"
  FROM "markettor_scheduledchange"
  WHERE ("markettor_scheduledchange"."executed_at" IS NULL
         AND "markettor_scheduledchange"."scheduled_at" <= '2023-12-21 09:00:00+00:00'::timestamptz)
  ORDER BY "markettor_scheduledchange"."scheduled_at" ASC
  LIMIT 10000
  FOR
  UPDATE NOWAIT
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.10
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.11
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.12
  '''
  SELECT "markettor_scheduledchange"."id",
         "markettor_scheduledchange"."record_id",
         "markettor_scheduledchange"."model_name",
         "markettor_scheduledchange"."payload",
         "markettor_scheduledchange"."scheduled_at",
         "markettor_scheduledchange"."executed_at",
         "markettor_scheduledchange"."failure_reason",
         "markettor_scheduledchange"."team_id",
         "markettor_scheduledchange"."created_at",
         "markettor_scheduledchange"."created_by_id",
         "markettor_scheduledchange"."updated_at"
  FROM "markettor_scheduledchange"
  WHERE "markettor_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.13
  '''
  SELECT "markettor_scheduledchange"."id",
         "markettor_scheduledchange"."record_id",
         "markettor_scheduledchange"."model_name",
         "markettor_scheduledchange"."payload",
         "markettor_scheduledchange"."scheduled_at",
         "markettor_scheduledchange"."executed_at",
         "markettor_scheduledchange"."failure_reason",
         "markettor_scheduledchange"."team_id",
         "markettor_scheduledchange"."created_at",
         "markettor_scheduledchange"."created_by_id",
         "markettor_scheduledchange"."updated_at"
  FROM "markettor_scheduledchange"
  WHERE "markettor_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.14
  '''
  SELECT "markettor_scheduledchange"."id",
         "markettor_scheduledchange"."record_id",
         "markettor_scheduledchange"."model_name",
         "markettor_scheduledchange"."payload",
         "markettor_scheduledchange"."scheduled_at",
         "markettor_scheduledchange"."executed_at",
         "markettor_scheduledchange"."failure_reason",
         "markettor_scheduledchange"."team_id",
         "markettor_scheduledchange"."created_at",
         "markettor_scheduledchange"."created_by_id",
         "markettor_scheduledchange"."updated_at"
  FROM "markettor_scheduledchange"
  WHERE "markettor_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.15
  '''
  SELECT "markettor_scheduledchange"."id",
         "markettor_scheduledchange"."record_id",
         "markettor_scheduledchange"."model_name",
         "markettor_scheduledchange"."payload",
         "markettor_scheduledchange"."scheduled_at",
         "markettor_scheduledchange"."executed_at",
         "markettor_scheduledchange"."failure_reason",
         "markettor_scheduledchange"."team_id",
         "markettor_scheduledchange"."created_at",
         "markettor_scheduledchange"."created_by_id",
         "markettor_scheduledchange"."updated_at"
  FROM "markettor_scheduledchange"
  WHERE "markettor_scheduledchange"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.16
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE "markettor_featureflag"."key" = 'flag-1'
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.2
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE "markettor_featureflag"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.3
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.4
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.5
  '''
  SELECT "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organization"
  WHERE "markettor_organization"."id" = '00000000-0000-0000-0000-000000000000'::uuid
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.6
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.7
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE "markettor_featureflag"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.8
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestProcessScheduledChanges.test_schedule_feature_flag_multiple_changes.9
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
